--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <button id="add">ADD</button>
-    <span></span>
+    <span>0</span>
     <button id="minus">MINUS</button>
   </body>
 </html>
